feat: get routes for events
