# config/api.yaml
@@ -397,3 +397,25 @@ paths:
           description: Event created
         default:
           description: Internal Server Error
+
+  /event/{eventSlug}:
+    get:
+      tags:
+       - Get Data API
+      security : 
+       - ApiTokens: []
+       - ApiKey: []
+      summary: GET Event by slug
+      parameter:
+       - in: path
+         name: eventSlug
+         required: true
+         schema:
+          type: string
+      responses:
+        '200':
+          description: OK.
+        '404':
+          description: Event Not Found.
+        default:
+          description: Internal Server Error.
